# LLM-for-GoFreight-API-Guide

./: .gitignore  README.md  pyproject.toml
data/: bundle-prod.json
src/: api_selector.py
src/api_bot/: agent.py  chat.py  engine.py  main.py  openapi_parser.py  operation_ids_chat.py  output_parser.py  stage1_parser.py  stage2_parser.py  test.py
src/prompt/: stage1_prompt.txt  stage2_prompt.txt  system_prompt.txt
