[tool.poetry]
name = "llm-for-gofreight-api-guide"
version = "0.1.0"
description = ""
authors = ["lon5948 <a0988282303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
