[tool.poetry]
name = "llm-for-gofreight-api-guide"
version = "0.1.0"
description = ""
authors = ["lon5948 <a0988282303@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
boto3 = "^1.34.84"
langchain = "^0.1.16"
openai = "0.27.2"
fire = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
